[package]
name = "argon2-async"
version = "0.1.2"
edition = "2021"
authors = ["0/0 <zero@imaskeleton.me>"]
readme = "README.md"
description = "async wrapper for the argon2 crate"
license = "MIT"
documentation = "https://docs.rs/argon2-async"
homepage = "https://github.com/tazz4843/argon2-async"
repository = "https://github.com/tazz4843/argon2-async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
any-rt = ["threadpool"]
tokio-rt = ["tokio/rt"]
async-std-rt = ["async-std"]
default = ["tokio-rt"]

[dependencies]
rand = "0.8.4"
num_cpus = "1.13"
argon2 = { version = "0.4", features = ["parallel"] }
tokio = { version = "1.14", default-features = false, features = ["sync"] }
once_cell = { version = "1.8", default-features = false, features = ["std"] }

async-std = { version = "1.10", optional = true }
threadpool = { version = "1.8", default-features = false, optional = true }
